--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                     <input class="user" type="email" name="" id="" placeholder="Nome de usuário, telefone ou E-mail">
                     <input class="pass" type="password" name="" id="" placeholder="Senha">
-                    <input class="button" type="button" value="Entrar">
+                    <a href=""><input class="button" type="button" value="Entrar"></a>
 
                     <div class="wrap-trace">
                         <div class="trace"></div>
